--- a/build.gradle
+++ b/build.gradle
@@ -7,57 +7,71 @@ buildscript {
     }
 }
 
+configure(allprojects) {
+    group 'org.syaku.tutorials'
+    version '1.0.0'
 
-group 'org.syaku.tutorials'
-version '1.0.0'
+    apply plugin: 'java'
+    apply plugin: 'idea'
+    apply plugin: 'propdeps'
+    apply plugin: 'propdeps-idea'
 
-apply plugin: 'java'
-apply plugin: 'war'
-apply plugin: 'idea'
-apply plugin: 'propdeps'
-apply plugin: 'propdeps-idea'
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
-ext {
-    slf4jVersion = '1.7.25'
-    junitVersion = '4.12'
-
-    springVersion = '4.3.7.RELEASE'
-    jacksonVersion = '2.7.0'
-}
-
-dependencies {
-    compile "org.slf4j:jcl-over-slf4j:$slf4jVersion",
-            "org.slf4j:slf4j-api:$slf4jVersion"
-
-    runtime('ch.qos.logback:logback-classic:1.1.7') {
-        exclude group: 'org.slf4j', module: 'slf4j-api'
+    repositories {
+        mavenCentral()
     }
 
-    testCompile "junit:junit:$junitVersion"
+    ext {
+        slf4jVersion = '1.7.25'
+        junitVersion = '4.12'
 
-    compile "org.springframework:spring-webmvc:$springVersion",
-            "org.springframework:spring-context-support:$springVersion"
+        springVersion = '4.3.7.RELEASE'
+        jacksonVersion = '2.7.0'
+    }
 
-    compile 'org.freemarker:freemarker:2.3.23'
+    configurations.all {
+        exclude group: "commons-logging", module: "commons-logging"
+    }
 
-    compile 'org.projectlombok:lombok:1.16.16'
+    dependencies {
+        compile "org.slf4j:jcl-over-slf4j:$slf4jVersion",
+                "org.slf4j:slf4j-api:$slf4jVersion"
 
-    compile "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}",
-            "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}",
-            "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
+        runtime('ch.qos.logback:logback-classic:1.1.7') {
+            exclude group: 'org.slf4j', module: 'slf4j-api'
+        }
 
-    compile 'org.apache.commons:commons-lang3:3.4',
-            'org.apache.commons:commons-collections4:4.1',
-            'commons-io:commons-io:2.5'
+        testCompile "junit:junit:$junitVersion"
 
-    providedCompile 'javax.servlet:javax.servlet-api:3.0.1',
-                    'javax.servlet.jsp:jsp-api:2.1',
-                    'javax.el:javax.el-api:2.2.4'
+        compile "org.springframework:spring-webmvc:$springVersion",
+                "org.springframework:spring-context-support:$springVersion"
+
+        compile 'org.freemarker:freemarker:2.3.23'
+
+        compile 'org.projectlombok:lombok:1.16.16'
+
+        compile "com.fasterxml.jackson.core:jackson-core:${jacksonVersion}",
+                "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}",
+                "com.fasterxml.jackson.core:jackson-annotations:${jacksonVersion}"
+
+        compile 'org.apache.commons:commons-lang3:3.4',
+                'org.apache.commons:commons-collections4:4.1',
+                'commons-io:commons-io:2.5'
+
+        provided 'javax.servlet:javax.servlet-api:3.0.1',
+                 'javax.el:javax.el-api:2.2.4'
+    }
+}
+
+
+configure(rootProject) {
+    apply plugin: 'war'
+
+    dependencies {
+        providedCompile 'javax.servlet:javax.servlet-api:3.0.1',
+                        'javax.servlet.jsp:jsp-api:2.1',
+                        'javax.el:javax.el-api:2.2.4'
+    }
 }
