--- a/spring-tutorials-core/build.gradle
+++ b/spring-tutorials-core/build.gradle
@@ -1,4 +1,7 @@
+group 'org.syaku.tutorials'
+version '1.0.0'
+
+
 jar {
     baseName = 'spring-tutorials-core'
-    version = "${tutorialsVersion}"
 }
