--- a/spring-tutorials-xssfilter/build.gradle
+++ b/spring-tutorials-xssfilter/build.gradle
@@ -1,6 +1,9 @@
 group 'org.syaku.tutorials'
 version '1.0.0'
 
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
 dependencies {
     compile project(':spring-tutorials-core')
 
