--- a/validation/build.gradle
+++ b/validation/build.gradle
@@ -3,10 +3,13 @@ version '1.0.0'
 
 apply plugin: 'war'
 
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
 dependencies {
 	compile project(':spring-tutorials-core')
 
-	compile "org.hibernate:hibernate-validator:5.2.4.Final"
+	compile "org.hibernate:hibernate-validator:4.3.2.Final"
 
 	providedCompile 'javax.servlet:javax.servlet-api:3.0.1',
 			'javax.servlet.jsp:jsp-api:2.1',
